Closing secondary full screen window destroys main Blender window too #74101

Closed
opened 2020-02-22 06:45:26 +01:00 by Kent Davis · 35 comments

System Information
Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.16

Blender Version
Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-21 23:50, hash: 0b626703f9
Worked: (optional)

Short description of error
Any open and import cause black screen during enter full screen

Exact steps for others to reproduce the error
MacOS 10.15.4 Beta (19E234g) Catalina
Cmd + O
Enter full screen (the green button).
Close the full screen window (the red button)

**System Information** Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.16 **Blender Version** Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-21 23:50, hash: `0b626703f9` Worked: (optional) **Short description of error** Any open and import cause black screen during enter full screen **Exact steps for others to reproduce the error** MacOS 10.15.4 Beta (19E234g) Catalina Cmd + O Enter full screen (the green button). Close the full screen window (the red button)
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

#77545 was marked as duplicate of this issue

#77545 was marked as duplicate of this issue

#77621 was marked as duplicate of this issue

#77621 was marked as duplicate of this issue

#77365 was marked as duplicate of this issue

#77365 was marked as duplicate of this issue

#76218 was marked as duplicate of this issue

#76218 was marked as duplicate of this issue

#74255 was marked as duplicate of this issue

#74255 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can you provide a simple .blend file (or .obj ...) + precise steps to reproduce the bug?
So we can test.

Videos and/or links to external sites etc. are not recommended as bug report (they can be provided as additional information only).

Can you provide a simple .blend file (or .obj ...) + precise steps to reproduce the bug? So we can test. Videos and/or links to external sites etc. are not recommended as bug report (they can be provided as additional information only).

Added subscriber: @jenkm

Added subscriber: @jenkm
  1. no files are required
  2. macOS specific

This is caused by the fact that the File Browser is a child (modal) window, e.g. View Render works fine.

To reproduce:

  • File > Open
  • switch File Browser to fullscreen mode
  • close File Browser and you will get Blender without any window

Opening a file will automatically close the File Browser window and you will get Blender without any window as well.

Bug present in 2.81.

1. no files are required 2. macOS specific This is caused by the fact that the File Browser is a child (modal) window, e.g. View Render works fine. To reproduce: - File > Open - switch File Browser to fullscreen mode - close File Browser and you will get Blender without any window Opening a file will automatically close the File Browser window and you will get Blender without any window as well. Bug present in 2.81.
Author

@jenkm Yes correct answer.
@mano-wii just listen what @jenkm said.

@jenkm Yes correct answer. @mano-wii just listen what @jenkm said.
Author

@mano-wii I am sorry I disagree with you all message.
I always can send video youtube and url of course I can send many times.
I am not good explain text only. I do use sign language ASL.

@mano-wii I am sorry I disagree with you all message. I always can send video youtube and url of course I can send many times. I am not good explain text only. I do use sign language ASL.

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @DanielMarcosPerujo

Added subscriber: @DanielMarcosPerujo
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Added subscriber: @MirekDusin

Added subscriber: @MirekDusin
Ankit Meel changed title from Open and Import appear black screen enter full screen to Closing secondary full screen window destroys main Blender window too 2020-04-29 13:44:44 +02:00

Added subscriber: @aleksijuvani

Added subscriber: @aleksijuvani

Added subscriber: @TonyZ

Added subscriber: @TonyZ

Removed subscriber: @aleksijuvani

Removed subscriber: @aleksijuvani

Added subscriber: @WhatsaEugene

Added subscriber: @WhatsaEugene
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

I don't think #77621 has anything to do with this report. Neither do I think this one should be high priority, since Blender doesn't actually crash but windows get hidden.

I don't think #77621 has anything to do with this report. Neither do I think this one should be high priority, since Blender doesn't actually crash but windows get hidden.
Author

Only for Mac when open the file and close file cause black screen within ENTER FULL SCREEN

Only for Mac when open the file and close file cause black screen within ENTER FULL SCREEN

Removed subscriber: @WhatsaEugene

Removed subscriber: @WhatsaEugene

The words: "crashes" and "black screen" reminded me of #74255 (macOS fullscreen crashes when opening save panel) and #76218 (Main window turns black when operating file view in full-screen mode ) that were merged here.
And we are having a lot of reports apparently related to this recently.

The words: "crashes" and "black screen" reminded me of #74255 (macOS fullscreen crashes when opening save panel) and #76218 (Main window turns black when operating file view in full-screen mode ) that were merged here. And we are having a lot of reports apparently related to this recently.

@JulianEisel it sometimes crashes (it is unclear what it depends on).

blender.crash.txt

macos.report.txt

@JulianEisel it sometimes crashes (it is unclear what it depends on). [blender.crash.txt](https://archive.blender.org/developer/F8605914/blender.crash.txt) [macos.report.txt](https://archive.blender.org/developer/F8605915/macos.report.txt)
Author

Yes when file close make black screen and I have to Control + Command + F 2 times make back normal.

Yes when file close make black screen and I have to Control + Command + F 2 times make back normal.
Member

@mano-wii #77621 does not mention full-screen mode, which is the crucial bit for the reports here. So I would be careful with merging them, we may loose a valid separate issue that way.

@mano-wii #77621 does not mention full-screen mode, which is the crucial bit for the reports here. So I would be careful with merging them, we may loose a valid separate issue that way.
Author

@mano-wii Do you have your own Macintosh?

@mano-wii Do you have your own Macintosh?

This issue was referenced by 60bf482dba

This issue was referenced by 60bf482dba721e3878770e6abefa3b35acca0021

This issue was referenced by 4b39de677d

This issue was referenced by 4b39de677d206afb99360665207498bb74c90893
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-06-10 18:44:11 +02:00

Added subscriber: @GunTurtle

Added subscriber: @GunTurtle
Author

You did not deeply inspect as well I am show you my iMac video youtube. https://youtu.be/QvI1z8fKOGQ

You did not deeply inspect as well I am show you my iMac video youtube. https://youtu.be/QvI1z8fKOGQ
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74101
No description provided.